// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMetaTagsAndIconLinks() should return valid jsx meta tags and icon links 1`] = `
<meta
  content="#FFFFFF"
  name="theme-color"
/>
`;

exports[`getMetaTagsAndIconLinks() should return valid jsx meta tags and icon links 2`] = `
<meta
  content="yes"
  name="apple-mobile-web-app-capable"
/>
`;

exports[`getMetaTagsAndIconLinks() should return valid jsx meta tags and icon links 3`] = `
<meta
  content="white"
  name="apple-mobile-web-app-status-bar-style"
/>
`;

exports[`getMetaTagsAndIconLinks() should return valid jsx meta tags and icon links 4`] = `
<meta
  content="Porsche UX"
  name="apple-mobile-web-app-title"
/>
`;

exports[`getMetaTagsAndIconLinks() should return valid jsx meta tags and icon links 5`] = `
<meta
  content="https://cdn.ui.porsche.com"
  name="msapplication-TileImage"
/>
`;

exports[`getMetaTagsAndIconLinks() should return valid jsx meta tags and icon links 6`] = `
<meta
  content="#FFFFFF"
  name="msapplication-TileColor"
/>
`;

exports[`getMetaTagsAndIconLinks() should return valid jsx meta tags and icon links 7`] = `
<link
  href="https://cdn.ui.porsche.com"
  rel="icon"
  sizes="32x32"
  type="image/png"
/>
`;

exports[`getMetaTagsAndIconLinks() should return valid jsx meta tags and icon links 8`] = `
<link
  href="https://cdn.ui.porsche.com"
  rel="apple-touch-icon"
/>
`;

exports[`getMetaTagsAndIconLinks() should return valid jsx meta tags and icon links 9`] = `
<link
  href="https://cdn.ui.porsche.com"
  rel="manifest"
/>
`;
